# minigui2.0.4

./: GNUmakefile  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.zh  TODO  Version  config.status  configure  configure.in  libtool  makefile.ng  mgconfig.h  mgconfig.h.in  mgconfig.h.in~  rebuild  rebuildx86  rules.make
ext/mywins/: Makefile  Makefile.am  Makefile.in
ext/mywins/.deps/: colordlg.Plo  colorspace.Plo  filedlg.Plo  helpwin.Plo  mywindows.Plo  newfiledlg.Plo
src/: Makefile  Makefile.am  Makefile.in  makefile.ng
src/.libs/: libminigui.lai
src/client/: Makefile  Makefile.am  Makefile.in  cliconn.c  client.c
src/control/: Makefile  Makefile.am  Makefile.in  scrollview.c  textedit.c
src/control/.deps/: button.Plo  combobox.Plo  ctrlmisc.Plo  edit.Plo  listbox.Plo  listmodel.Plo  menubutton.Plo  newtoolbar.Plo  progressbar.Plo  propsheet.Plo  scrolled.Plo  scrollview.Plo  scrollwnd.Plo  simedit.Plo  static.Plo  textedit.Plo  toolbar.Plo  trackbar.Plo
src/font/: Makefile  Makefile.am  Makefile.in  charset.c  convgbmap.c  euckrunimap.c  fontcache.c  freetype.c  freetype.h  freetype2.c  freetype2.h  gb18030unimap.c  gbkunimap.c  jisunimap.c  makefile.ng  mapunitobig5.c  mapunitogb18030.c  mapunitogbk.c  rawbitmap.c  scripteasy.c  se_minigui.h  sjisunimap.c  type1.c  type1.h  ujisunimap.c
src/font/.deps/: big5unimap.Plo  charset.Plo  devfont.Plo  euckrunimap.Plo  fontcache.Plo  fontname.Plo  freetype.Plo  freetype2.Plo  gb18030unimap.Plo  gbkunimap.Plo  gbunimap.Plo  logfont.Plo  mapunitobig5.Plo  mapunitogb.Plo  mapunitogb18030.Plo  mapunitogbk.Plo  qpf.Plo  rawbitmap.Plo  scripteasy.Plo  sjisunimap.Plo  sysfont.Plo  textops.Plo  type1.Plo  ujisunimap.Plo  varbitmap.Plo
src/font/in-core/: 12x24-iso8859-1.c  Makefile  Makefile.am  Makefile.in  gothic_12_jiskan.c  gothic_14_jiskan.c  gothic_16_jiskan.c  gothic_6x12rk.c  gothic_7x14rk.c  gothic_8x16rk.c  hei-16-gb2312.c  makefile.ng  ming-12-big5.c  ming-16-big5.c  qpf-fmkai-18.c  qpf-fmsong-12.c  qpf-helvetica-10.c  qpf-micro-4.c  qpf-times-10.c  song-24-gb2312.c
src/gui/: Makefile  Makefile.am  Makefile.in
src/gui/.deps/: accelkey.Plo  caret.Plo  ctrlclass.Plo  de-kmap.Plo  de-latin1-kmap.Plo  defkeymap.Plo  dialog.Plo  element.Plo  es-cp850-kmap.Plo  es-kmap.Plo  fr-kmap.Plo  fr-pc-kmap.Plo  it-kmap.Plo  keyboard.Plo  menu.Plo  window.Plo
src/ial/: Makefile  Makefile.am  Makefile.in  c33l05.c  dfb.c  makefile.ng  wvfbial.c
src/ial/.deps/: 2410.Plo  ads.Plo  ads7846.Plo  arm3000.Plo  auto.Plo  c33l05.Plo  comminput.Plo  custom.Plo  dfb.Plo  dm270.Plo  dmg-stb.Plo  dummy.Plo  em85.Plo  em86.Plo  em8620.Plo  embest2410.Plo  embest44b0.Plo  ep7211.Plo  evmv10.Plo  fft7202.Plo  figueroa.Plo  fip.Plo  fxrm9200.Plo  helio.Plo  hh2410r3.Plo  hh2440.Plo  hh5249kbdir.Plo  hi3510.Plo  ial.Plo  ipaq.Plo  l7200.Plo  mc68x328.Plo  mpc823.Plo  palm2.Plo  ps2-conv.Plo  px255b.Plo  qvfb.Plo  random.Plo  skyeye-ep7312.Plo  svpxx.Plo  (+7 more)
src/ial/native/: Makefile  Makefile.in
src/ime/: Makefile  Makefile.am  Makefile.in  hzinput.c
src/ime/.deps/: hzinput.Plo
src/include/: Makefile  Makefile.in  client.h  dc.h  drawsemop.h  ial.h  server.h  sharedres.h  zi-procs.h
src/include/control/: Makefile  Makefile.in
src/kernel/: Makefile  Makefile.am  Makefile.in  cursor-procs.c  cursor-sa.c  desktop-procs.c  desktop-sa.c  event.c  init-lite.c  init.c  message.c  sharedres.c
src/kernel/.deps/: blockheap.Plo  cursor-procs.Plo  cursor-sa.Plo  cursor.Plo  desktop-procs.Plo  desktop-sa.Plo  desktop-ths.Plo  event.Plo  fixstr.Plo  init-lite.Plo  init.Plo  message.Plo  sharedres.Plo  timer.Plo
src/libc/: Makefile  Makefile.am  Makefile.in
src/main/: Makefile  Makefile.am  Makefile.in  makefile.ng
src/main/.deps/: main.Plo
src/misc/: Makefile  Makefile.am  Makefile.in  misc-dt.c  nposix.c
src/misc/.deps/: about.Plo  clipboard.Plo  endianrw.Plo  error.Plo  listenfd.Plo  math.Plo  misc.Plo  nposix.Plo  rwops.Plo  sockio.Plo  systext.Plo
src/mybmp/: Makefile  Makefile.am  Makefile.in  mybmp.c
src/mybmp/.deps/: gif.Plo  jpeg.Plo  lbm.Plo  mybmp.Plo  pcx.Plo  png.Plo  tga.Plo  winbmp.Plo
src/newgal/: Makefile  Makefile.am  Makefile.in  blit.c  blit.h  blit_A.c  makefile.ng  pixels.c  surface.c  video.c
src/newgal/.deps/: RLEaccel.Plo  blit.Plo  blit_0.Plo  blit_1.Plo  blit_A.Plo  blit_N.Plo  gamma.Plo  newgal.Plo  pixels.Plo  stretch.Plo  surface.Plo  video.Plo  yuv.Plo  yuv_mmx.Plo  yuv_sw.Plo
src/newgal/bf533/: Makefile  Makefile.am  Makefile.in
src/newgal/commlcd/: Makefile  Makefile.in
src/newgal/dfb/: Makefile  Makefile.am  Makefile.in  dfbvideo.c  dfbvideo.h
src/newgal/dummy/: Makefile  Makefile.in
src/newgal/em85xxosd/: Makefile  Makefile.am  Makefile.in
src/newgal/em85xxyuv/: Makefile  Makefile.am  Makefile.in
src/newgal/em86gfx/: Makefile  Makefile.am  Makefile.in
src/newgal/fbcon/: Makefile  Makefile.in
src/newgal/hisi/: Makefile  Makefile.am  Makefile.in  hi3510_fbvideo.c  hi3510_fbvideo.h  hi3560_fb.h  hi3560_fbvideo.c  hi3560_fbvideo.h
src/newgal/mb93493/: Makefile  Makefile.am  Makefile.in
src/newgal/mlshadow/: Makefile  Makefile.am  Makefile.in
src/newgal/qvfb/: Makefile  Makefile.in
src/newgal/shadow/: Makefile  Makefile.in
src/newgal/svpxxosd/: Makefile  Makefile.am  Makefile.in
src/newgal/utpmc/: Makefile  Makefile.am  Makefile.in
src/newgal/wvfb/: Makefile  Makefile.am  Makefile.in  makefile.ng
src/newgdi/: Makefile  Makefile.am  Makefile.in  attr.c  bitmap.c  drawtext.c  gdi.c  polygon.h  readbmp.c  text.c
src/newgdi/.deps/: advapi.Plo  arc.Plo  attr.Plo  bitmap.Plo  clip.Plo  coor.Plo  drawtext.Plo  flood.Plo  gdi.Plo  generators.Plo  icon.Plo  line.Plo  map.Plo  miarc.Plo  midash.Plo  mifillarc.Plo  mifpolycon.Plo  mispans.Plo  miwideline.Plo  palette.Plo  pixel.Plo  pixel_ops.Plo  polygon.Plo  readbmp.Plo  (+6 more)
src/server/: Makefile  Makefile.am  Makefile.in  client.c  layer.c  request.c  servaccept.c  server.c  servlisten.c
src/standalone/: Makefile  Makefile.am  Makefile.in  standalone.c
src/sysres/: Makefile  Makefile.am  Makefile.in
(+138 files in other folders)
