## Makefile.am for the bf533 video driver

TOP_DIR=../../..
INCLUDES=-I../../../include -I../../include -I../

SRC_FILES =             \
    bf533video.c

HDR_FILES = \
    bf533video.h

noinst_LTLIBRARIES = libvideo_bf533.la
libvideo_bf533_la_SOURCES = $(SRC_FILES) $(HDR_FILES)

EXTRA_DIST=makefile.ng

LIB_NAME=libvideo_bf533

