
## Makefile.am for the video driver on DirectFB

TOP_DIR=../../..
INCLUDES=-I../../../include -I../../include -I../

noinst_LTLIBRARIES = libvideo_dfb.la

SRC_FILES = dfbvideo.c

HDR_FILES= dfbvideo.h

libvideo_dfb_la_SOURCES = $(SRC_FILES) $(HDR_FILES)

EXTRA_DIST=makefile.ng

LIB_NAME=libvideo_dfb
